@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam groupInheritance 2
skinparam linetype ortho


skinparam classAttributeIconSize 0

'left to right direction

class User {
    -String name
    -String emailAddress
    -String password
    -String telephoneNumber
    ---
    +User(name, emailAddress, password)
    +getName
    +getEmailAddress
    +getPassword
    +getTelephoneNumber
}


class AnnouncementRepository extends Repositories{
    +getAnnouncement()
    +addPropertyAnnouncement(property)
}


class VisitsRequestRepository extends Repositories{
    +getVisitRequest()
    +addVisitRequest(visitRequest)
    +getVisitAccepted()
    +addVisitAccepted(visitRequest)
}

class VisitRequest{
    -User user
    -Property property
    -String date
    -String timeFrame
}

class Property{
    -Double areaOfProperty
    -Double distanceFromCentre
    -String acceptanceDate
    -String requestDate

    -setAreaOfProperty()
    -setDistanceFromCentre()
    -setRequestDate()
    -setAcceptanceDate()
    +getRequestDate()
    +getAcceptanceDate
    +getAreaOfProperty()
    +getDistanceFromCentre()

}

class TypeOfTransaction{
    -String transactionType
    -String monetaryValue

    -setTransactionType()
    -setMonetaryValue()
    +getTransactionType()
    +getMonetaryValue()
}

class Address{
    -String street
    -String city
    -String district
    -String state
    -String zipCode

    -setStreet()
    -setCity()
    -setDistrict()
    -setState()
    -setZipCode()
    +getStreet()
    +getCity()
    +getDistrict()
    +getState()
    +getZipCode()
}

class PropertyTypeRepository extends Repositories{
    +addProperty()
    +getPropertyType()
}

class Photo{
    -Integer photoID
    -String photoURI

    +setPhotoData()
}

class Building Extends Property{
    -Integer bedrooms
    -Integer bathrooms
    -Integer parkingSpaces

    -setBedrooms()
    -setBathrooms()
    -setParkingSpaces()
    +getBedrooms()
    +getBathrooms()
    +getParkingSpaces()
}

class Equipment{
    -String name

    -setEquipmentName()
    +getEquipmentName()
}

class House extends Building{
    -Boolean basement
    -Boolean loft
    -String sunExposure

    -setBasement()
    -setLoft()
    -setSunExposure()
    +getBasement()
    +getLoft()
    +getSunExposure()
}


class Repositories {
    -Repositories()
    +getInstance()
    +getAgentRepository()
    +getPropertyTypeRepository()
    +getPropertyRepository()
}
class VisitRequestUI{
    +keepProperty()
}

class VisitRequestController{
    +createVisitRequest(name, telephoneNumber, date, timeFrame, propertyID)
}

class Land extends Property{

}

'class Password{
'    password
'}
User ..> VisitRequestUI
VisitRequestUI ..> VisitRequestController


VisitsRequestRepository "1" --left "1...*"VisitRequest : < is stored in
VisitRequestController ..> Repositories
VisitRequestController ..> VisitRequest


Property"1" -- "1" PropertyTypeRepository : < has propertyType
Address"1" -- "1"Property : < has address
Equipment"1" -- "1" Building : < has equipmentList
Photo"1...30"--"1" Property : < has photos
TypeOfTransaction "1" -- "1" Property : < has type of property


Property *-- VisitRequest



@enduml